update notebook to keep original table

--- a/public_data_release.ipynb
+++ b/public_data_release.ipynb
@@ -227,16 +227,17 @@
     "c = 2.9979245e8\n",
     "H0 = 70.0\n",
     "\n",
-    "table['name'] = table['source_name']\n",
-    "table['qflag'] = table['flag']\n",
-    "table['kflag'] = np.zeros(len(table['flag']))\n",
-    "table['team_release'] = ['' * len(table['flag'])]\n",
-    "table['f_sum_corr'] = table['f_sum'] / 10.0 ** (0.0285 * np.log10(table['f_sum'])**3.0 -0.439 * np.log10(table['f_sum'])**2.0 + 2.294 * np.log10(table['f_sum']) - 4.097)\n",
-    "table['err_f_sum_corr'] = table['err_f_sum'] / table['f_sum'] * table['f_sum_corr']\n",
-    "table['v_est'] = ((rest_freq - table['freq']) / table['freq'] * c / 1000.0)\n",
-    "table['dist_h'] = table['v_est'] / H0\n",
-    "table['log_m_hi'] = np.log10(49.7 * table['dist_h']**2.0 * table['f_sum'])\n",
-    "table['log_m_hi_corr'] = np.log10(49.7 * table['dist_h']**2.0 * table['f_sum_corr'])"
+    "write_table = table.copy()\n",
+    "write_table['name'] = table['source_name']\n",
+    "write_table['qflag'] = table['flag']\n",
+    "write_table['kflag'] = np.zeros(len(table['flag']))\n",
+    "write_table['team_release'] = ['' * len(table['flag'])]\n",
+    "write_table['f_sum_corr'] = table['f_sum'] / 10.0 ** (0.0285 * np.log10(table['f_sum'])**3.0 -0.439 * np.log10(table['f_sum'])**2.0 + 2.294 * np.log10(table['f_sum']) - 4.097)\n",
+    "write_table['err_f_sum_corr'] = table['err_f_sum'] / table['f_sum'] * write_table['f_sum_corr']\n",
+    "write_table['v_est'] = ((rest_freq - table['freq']) / table['freq'] * c / 1000.0)\n",
+    "write_table['dist_h'] = write_table['v_est'] / H0\n",
+    "write_table['log_m_hi'] = np.log10(49.7 * write_table['dist_h']**2.0 * table['f_sum'])\n",
+    "write_table['log_m_hi_corr'] = np.log10(49.7 * write_table['dist_h']**2.0 * write_table['f_sum_corr'])"
    ]
   },
   {
@@ -248,7 +249,6 @@
    "source": [
     "# Remove certain columns from the astropy table\n",
     "\n",
-    "write_table = table\n",
     "write_table.remove_columns(['id', 'run_id', 'instance_id', 'access_url', 'access_format', 'source_name', 'flag', 'v_est', 'l', 'b', 'v_rad', 'v_opt', 'v_app', 'tags'])\n",
     "votable = from_table(write_table)"
    ]
