cadc catalog format and file convention

--- a/public_data_release.ipynb
+++ b/public_data_release.ipynb
@@ -33,6 +33,7 @@
     "import pyvo as vo\n",
     "from pyvo.auth import authsession, securitymethods\n",
     "import numpy as np\n",
+    "from astropy.io import ascii\n",
     "from astropy.io.votable import from_table, parse_single_table\n",
     "from astropy.table import vstack"
    ]
@@ -128,8 +129,8 @@
     "tags = ['Norma DR1', 'NGC 5044 DR2']\n",
     "\n",
     "# Release name\n",
-    "release_name = \"WALLABY Test PDR\"\n",
-    "release_name = release_name.replace(' ', '_')"
+    "release_name_raw = \"WALLABY Test PDR\"\n",
+    "release_name = release_name_raw.replace(' ', '_')"
    ]
   },
   {
@@ -189,8 +190,11 @@
     "    result = tap.search(q)\n",
     "    if idx == 0:\n",
     "        table = result.to_table()\n",
+    "        table['SRCTR'] = tag_name.replace(' ', '_').replace('DR', 'TR')\n",
     "    else:\n",
-    "        table = vstack([table, result.to_table()])\n",
+    "        new_table = result.to_table()\n",
+    "        new_table['SRCTR'] = tag_name.replace(' ', '_').replace('DR', 'TR')\n",
+    "        table = vstack([table, new_table])\n",
     "table"
    ]
   },
@@ -207,7 +211,7 @@
     "| --- | --- |\n",
     "| `qflag` |  |\n",
     "| `kflag` | column to indicate whether or not there is a kinematic model associated with the detection |\n",
-    "| `team_release` | |\n",
+    "| `team_release` | Column with the release name |\n",
     "| `f_sum_corr` | |\n",
     "| `err_f_sum_corr` | |\n",
     "| `dist_h` | |\n",
@@ -231,7 +235,7 @@
     "write_table['name'] = table['source_name']\n",
     "write_table['qflag'] = table['flag']\n",
     "write_table['kflag'] = np.zeros(len(table['flag']))\n",
-    "write_table['team_release'] = ['' * len(table['flag'])]\n",
+    "write_table['team_release'] = release_name_raw\n",
     "write_table['f_sum_corr'] = table['f_sum'] / 10.0 ** (0.0285 * np.log10(table['f_sum'])**3.0 -0.439 * np.log10(table['f_sum'])**2.0 + 2.294 * np.log10(table['f_sum']) - 4.097)\n",
     "write_table['err_f_sum_corr'] = table['err_f_sum'] / table['f_sum'] * write_table['f_sum_corr']\n",
     "write_table['v_est'] = ((rest_freq - table['freq']) / table['freq'] * c / 1000.0)\n",
@@ -249,7 +253,7 @@
    "source": [
     "# Remove certain columns from the astropy table\n",
     "\n",
-    "write_table.remove_columns(['id', 'run_id', 'instance_id', 'access_url', 'access_format', 'source_name', 'flag', 'v_est', 'l', 'b', 'v_rad', 'v_opt', 'v_app', 'tags'])\n",
+    "write_table.remove_columns(['id', 'run_id', 'instance_id', 'access_url', 'access_format', 'source_name', 'flag', 'v_est', 'l', 'b', 'v_rad', 'v_opt', 'v_app', 'tags', 'SRCTR'])\n",
     "votable = from_table(write_table)"
    ]
   },
@@ -405,7 +409,74 @@
     "\n",
     "import tarfile\n",
     "import glob\n",
-    "from astropy.io import fits"
+    "from astropy.io import fits\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "213d2d0d-0f0a-49a6-9b87-8a5bc74195ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pixel_hdu(ra, dec, frequency):\n",
+    "    \"\"\"Create dummy pixel hdu element (TBA)\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    return\n",
+    "\n",
+    "def spectrum_to_fits(f_in, f_cube, f_out, ra, dec, frequency):\n",
+    "    \"\"\"Convert the SoFiA-2 output spectrum .txt file to a .fits file for public release\n",
+    "    Writes a HDUList object with:\n",
+    "        - dummy pixel (fits metadata from the accompanying _cube.fits file\n",
+    "        - fits binary table with spectra.txt content\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    # read spectrum and construct binary table\n",
+    "    channels, freq, flux_density, pixels = np.loadtxt(f_in, skiprows=38, unpack=True, usecols=[0,1,2,3])    \n",
+    "    channels_col = fits.Column(name='Channel', format='D', array=channels.astype('int'), unit='')\n",
+    "    freq_col = fits.Column(name='Frequency', format='E', array=freq, unit='Hz')\n",
+    "    flux_density_col = fits.Column(name='Flux density', format='E', array=flux_density, unit='Jy')\n",
+    "    pixel_col = fits.Column(name='Pixels', format='D', array=pixels.astype('int'), unit='')\n",
+    "    fits_table = fits.BinTableHDU.from_columns([channels_col, freq_col, flux_density_col, pixel_col])\n",
+    "    \n",
+    "    # construct dummy image hdu\n",
+    "    keys = ['OBJECT', 'CDELT1', 'CDELT2', 'CDELT3', 'CTYPE1', 'CTYPE2', 'CTYPE3', 'ORIGIN', 'EQUINOX', 'LONPOLE', 'LATPOLE', 'SRCVERS', 'SRCTR']\n",
+    "    # keys += ['SBID']\n",
+    "    with fits.open(f_cube, mode='readonly') as hdu_cube:\n",
+    "        header_cube = hdu_cube[0].header\n",
+    "    hdu = fits.PrimaryHDU()\n",
+    "    header = hdu.header\n",
+    "    hdu.data = np.array([[[0]]]).astype('int16')\n",
+    "    header['CRPIX1'] = 0\n",
+    "    header['CRPIX2'] = 0\n",
+    "    header['CRPIX3'] = 0\n",
+    "    header['CUNIT1'] = 'deg'\n",
+    "    header['CUNIT2'] = 'deg'\n",
+    "    header['CUNIT3'] = 'Hz'\n",
+    "    header['CRVAL1'] = ra\n",
+    "    header['CRVAL2'] = dec\n",
+    "    header['CRVAL3'] = frequency\n",
+    "    header['SPECSYS'] = 'BARYCENT'\n",
+    "    header['RADESYS'] = 'FK5'\n",
+    "    for k in keys:\n",
+    "        header.set(k, header_cube[k])    \n",
+    "\n",
+    "    # construct hdulist and write to file\n",
+    "    hdu_list = fits.HDUList([hdu, fits_table])\n",
+    "    hdu_list.writeto(f_out, overwrite=True, output_verify='fix')\n",
+    "    return\n",
+    "\n",
+    "def mom0_to_png(data, f_out):\n",
+    "    \"\"\"Create plot of mom0 map as png file for archive cutouts\n",
+    "\n",
+    "    \"\"\"\n",
+    "    plt.imshow(data)\n",
+    "    plt.axis('off')\n",
+    "    plt.savefig(f_out, bbox_inches='tight', pad_inches=0)\n",
+    "    plt.close()\n",
+    "    return"
    ]
   },
   {
@@ -427,7 +498,7 @@
     "        tf.extractall(path=filename)\n",
     "    # os.remove(f)\n",
     "\n",
-    "# Update fits files\n",
+    "# Update product files\n",
     "for idx_pf, pf in enumerate(product_files):\n",
     "    print(f'Folder {pf} [{idx_pf + 1}/{len(product_files)}]')\n",
     "    fits_files = glob.glob(os.path.join(pf, '*.fits'))\n",
@@ -440,7 +511,25 @@
     "            header['SRCVERS'] = header['ORIGIN']  # Get SoFiA version from ORIGIN header\n",
     "            header['SRCTR'] = release_name\n",
     "            header['OBJECT'] = source_name\n",
-    "            hdul.flush()"
+    "            hdul.flush()\n",
+    "\n",
+    "            # Download moment 0 map figure\n",
+    "            if 'mom0.fits' in ff:\n",
+    "                print(f'[{idx_ff + 1}/{len(fits_files)}] Saving mom0 png figure')\n",
+    "                data = hdul[0].data\n",
+    "                mom0_png = ff.replace('.fits', '.png')\n",
+    "                mom0_to_png(data, mom0_png)\n",
+    "\n",
+    "    # Update spectra\n",
+    "    print('Creating spec.fits file')\n",
+    "    spectra_files = glob.glob(os.path.join(pf, '*spec.txt'))\n",
+    "    assert len(spectra_files) == 1, 'Should only be 1 spectrum file per detection'\n",
+    "    spec_f_in = spectra_files[0]\n",
+    "    spec_f_out = spec_f_in.replace('.txt', '.fits')\n",
+    "    spec_f_cube = spec_f_in.replace('spec.txt', 'cube.fits')\n",
+    "    assert os.path.exists(spec_f_cube), 'Cutout cube corresponding to spectra file does not exist'\n",
+    "    row = write_table[write_table['name'] == source_name][0]\n",
+    "    spectrum_to_fits(spec_f_in, spec_f_cube, spec_f_out, row['ra'], row['dec'], row['freq'])"
    ]
   },
   {
@@ -483,10 +572,12 @@
     "for idx_pf, pf in enumerate(product_files):\n",
     "    source_name = pf.split('/')[1].replace(' ', '_')\n",
     "    print(f'Source {source_name} [{idx_pf + 1}/{len(product_files)}]')\n",
+    "    row = table[table['source_name'] == source_name.replace('_', ' ')][0]\n",
+    "    srctr = row['SRCTR']\n",
     "    p_files = glob.glob(os.path.join(pf, '*'))\n",
     "    for f in p_files:\n",
     "        suffix = f.rsplit('_', 1)[1]\n",
-    "        new_filename = f'{source_name}_{release_name}_{suffix}'\n",
+    "        new_filename = f'{source_name}_{srctr}_{release_name}_{suffix}'\n",
     "        \n",
     "        # moment maps\n",
     "        if any([t in suffix for t in ['mom0', 'mom1', 'mom2', 'chan']]):\n",
@@ -497,7 +588,7 @@
     "            shutil.copy(f, os.path.join(basedir, 'cubelets', new_filename))\n",
     "        \n",
     "        # spectra\n",
-    "        elif any([t in suffix for t in ['spec']]):\n",
+    "        elif any([t in suffix for t in ['spec.fits']]):\n",
     "            shutil.copy(f, os.path.join(basedir, 'spectra', new_filename))\n",
     "        \n",
     "        else:\n",
@@ -511,11 +602,19 @@
    "source": [
     "## CADC Release\n",
     "\n",
-    "Copy product files for CADC public data release required file structure.\n",
+    "Create VOTable object for the metadata, but export the catalogue data as a CSV file. Copy product files for CADC public data release required file structure.\n",
     "\n",
     "- Each detection (file format: WALLABY name, release version) folder contains the product files\n",
-    "- Each product file has the format: `f'{WALLABY_name}_{release_version}_<ext>.fits`"
+    "- Each product file has the format: `f'{WALLABY_name}_{internal_release_version}_{release_version}_<ext>.fits`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3eef8c3-d35d-4762-a15b-6306ed48943b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -530,20 +629,28 @@
     "basedir = os.path.join('CADC', release_name)\n",
     "os.makedirs(basedir, exist_ok=True)\n",
     "\n",
-    "# Copy catalogue xml\n",
-    "shutil.copy(votable_filename, os.path.join(basedir, votable_filename))\n",
+    "# Write catalogue header xml and data as CSV\n",
+    "header_table = write_table.copy()\n",
+    "header_table.remove_rows(slice(0, len(header_table), 1))\n",
+    "header_table\n",
+    "header_votable = from_table(header_table)\n",
+    "header_votable.version = '1.3'\n",
+    "header_votable.to_xml(os.path.join(basedir, f'{votable_filename}.xml'))\n",
+    "ascii.write(write_table, os.path.join(basedir, f'{votable_filename}.csv'), format='csv', overwrite=True)\n",
     "\n",
     "# Copy product files\n",
     "for idx_pf, pf in enumerate(product_files):\n",
     "    source_name = pf.split('/')[1].replace(' ', '_')\n",
+    "    row = table[table['source_name'] == source_name.replace('_', ' ')][0]\n",
+    "    srctr = row['SRCTR']\n",
     "    print(f'Source {source_name} [{idx_pf + 1}/{len(product_files)}]')\n",
     "    source_dir = os.path.join(basedir, f'{source_name}_{release_name}')\n",
     "    os.makedirs(source_dir, exist_ok=True)\n",
     "    p_files = glob.glob(os.path.join(pf, '*'))\n",
     "    for f in p_files:\n",
     "        suffix = f.rsplit('_', 1)[1]\n",
-    "        new_filename = f'{source_name}_{release_name}_{suffix}'\n",
-    "        if any([t in suffix for t in ['mom0', 'mom1', 'mom2', 'chan', 'cube', 'mask', 'spec']]):\n",
+    "        new_filename = f'{source_name}_{srctr}_{release_name}_{suffix}'\n",
+    "        if any([t in suffix for t in ['mom0', 'mom1', 'mom2', 'chan', 'cube', 'mask', 'spec.fits']]):\n",
     "            shutil.copy(f, os.path.join(source_dir , new_filename))\n",
     "        else:\n",
     "            print(f'Skipping file {f}')"
