data central public data release test

--- a/public_data_release.ipynb
+++ b/public_data_release.ipynb
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "# List of tags\n",
-    "tags = ['Norma DR1', 'NGC 5044 DR2']\n",
+    "tags = ['Hydra DR2']\n",
     "\n",
     "# Release name\n",
     "release_name_raw = \"WALLABY Test PDR\"\n",
@@ -195,6 +195,8 @@
     "        new_table = result.to_table()\n",
     "        new_table['SRCTR'] = tag_name.replace(' ', '_').replace('DR', 'TR')\n",
     "        table = vstack([table, new_table])\n",
+    "\n",
+    "table = table[0:20]\n",
     "table"
    ]
   },
@@ -395,7 +397,7 @@
    "source": [
     "# Write output products for a source\n",
     "\n",
-    "download_table_products(table[0:3], release_name)"
+    "download_table_products(table[0:20], release_name)"
    ]
   },
   {
@@ -533,6 +535,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ba8ef59-aee9-4424-926b-dc6a7a000c7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prepare header table\n",
+    "\n",
+    "header_table = write_table.copy()\n",
+    "header_table.remove_rows(slice(0, len(header_table), 1))\n",
+    "header_table\n",
+    "header_votable = from_table(header_table)\n",
+    "header_votable.version = '1.3'\n",
+    "header_votable.to_xml(os.path.join(basedir, votable_filename))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "40361703-3b71-4791-b365-1d8c49605797",
    "metadata": {},
@@ -611,14 +630,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3eef8c3-d35d-4762-a15b-6306ed48943b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8cce822a-1245-471a-bc57-93c5b366468b",
    "metadata": {},
    "outputs": [],
@@ -629,14 +640,8 @@
     "basedir = os.path.join('CADC', release_name)\n",
     "os.makedirs(basedir, exist_ok=True)\n",
     "\n",
-    "# Write catalogue header xml and data as CSV\n",
-    "header_table = write_table.copy()\n",
-    "header_table.remove_rows(slice(0, len(header_table), 1))\n",
-    "header_table\n",
-    "header_votable = from_table(header_table)\n",
-    "header_votable.version = '1.3'\n",
-    "header_votable.to_xml(os.path.join(basedir, f'{votable_filename}.xml'))\n",
-    "ascii.write(write_table, os.path.join(basedir, f'{votable_filename}.csv'), format='csv', overwrite=True)\n",
+    "# Write catalog\n",
+    "ascii.write(write_table, os.path.join(basedir, votable_filename.replace('.xml', '.csv')), format='csv', overwrite=True)\n",
     "\n",
     "# Copy product files\n",
     "for idx_pf, pf in enumerate(product_files):\n",
@@ -654,6 +659,200 @@
     "            shutil.copy(f, os.path.join(source_dir , new_filename))\n",
     "        else:\n",
     "            print(f'Skipping file {f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "978c81a8-85e5-49b2-8ddc-c97fe7a7ae8b",
+   "metadata": {},
+   "source": [
+    "## Data Central\n",
+    "\n",
+    "Exporting to Data Central requires the generation of various .txt files that contain metadata for the survey and catalog files. Some user input here is required to describe the metadata for the project and the data release."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8502db2-b257-4e5e-a15b-b7d62010c736",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Survey description metadata\n",
+    "\n",
+    "import csv\n",
+    "from datetime import datetime\n",
+    "now = datetime.now().strftime('%d-%m-%Y')\n",
+    "\n",
+    "def dict_to_dc_meta(filename, data):\n",
+    "    \"\"\"Custom function to write dicts to CSV files following the file format convention\n",
+    "    required for Data Central metadata files.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    with open(filename, 'w', newline='') as f:\n",
+    "        csv_writer = csv.DictWriter(f, data.keys(), delimiter='|')\n",
+    "        csv_writer.writeheader()\n",
+    "        csv_writer.writerow(data)\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2865161-c023-4b5f-ad51-3a49b1181333",
+   "metadata": {},
+   "source": [
+    "<span style=\"font-weight: bold; color: #FF0000;\">⚠ Update the cell below with the relevant survey metadata for this release</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dcb90af-7bfd-4568-8a76-b1d24904a8b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Survey metadata\n",
+    "survey_meta = {\n",
+    "    'name': 'wallaby',\n",
+    "    'pretty_name': 'WALLABY',\n",
+    "    'title': 'Widefield ASKAP L-band Legacy All-sky Blind surveY',\n",
+    "    'description': 'The Widefield ASKAP L-band Legacy All-sky Blind surveY (or WALLABY) is one of a number of surveys that are now running on the Australian SKA Pathfinder (ASKAP), which is an innovative imaging radio telescope located in an extremely radio quiet zone (the Inyarrimanha Ilgari Bundara, Murchison Radio-astronomy Observatory) in Western Australia. The aim of WALLABY is to use the powerful widefield phased-array technology of ASKAP to observe half of the Southern Hemisphere in the 21-cm line of neutral hydrogen (or HI) at 30-arcsec resolution (with a simultaneous 10-arcsec zoom mode for previously-known galaxies), thereby detecting and imaging the gas distribution in hundreds of thousands of external galaxies in the local Universe. This will allow astronomers to gain a much improved understanding of the processes involved in galaxy formation and evolution, and the role of stellar and black hole feedback, gas accretion and galaxy interactions in these processes. WALLABY has concluded two Pilot Survey phases and has imaged nearly 400 square degree of sky around nearby galaxy clusters with the full ASKAP-36 array, as well as a number of early science fields with smaller numbers of antennas. Full WALLABY started in late-2022.',\n",
+    "    'pi': 'Lister Staveley-Smith, Barbara Catinella',\n",
+    "    'contact': 'lister.staveley-smith@uwa.edu.au',\n",
+    "    'website': 'https://wallaby-survey.org/'\n",
+    "}\n",
+    "\n",
+    "# Release meta\n",
+    "release_meta = {\n",
+    "    'name': 'wallaby_pdr2',\n",
+    "    'pretty_name': 'WALLABY Pilot Survey public data release 2',\n",
+    "    'version': 1,\n",
+    "    'data_release_number': 1,\n",
+    "    'contact': 'Tobias Westmeier <tobias.westmeier@uwa.edu.au>',\n",
+    "    'group': 'WALLABY', \n",
+    "    'public': True\n",
+    "}\n",
+    "\n",
+    "# Catalogue metadata\n",
+    "group_meta = {\n",
+    "    'name': 'WALLABY DR2',\n",
+    "    'pretty_name': 'WALLABY DR2',\n",
+    "    'description': 'WALLABY Pilot Survey Public Data Release 2',\n",
+    "    'documentation': '-',\n",
+    "    'contact': 'Tobias Westmeier <tobias.westmeier@uwa.edu.au>',\n",
+    "    'date': now,\n",
+    "    'version': 1\n",
+    "}\n",
+    "\n",
+    "coordinate_meta = {\n",
+    "    'table_name': 'detection',\n",
+    "    'source_name_col': 'name',\n",
+    "    'long_col': 'ra',\n",
+    "    'lat_col': 'dec',\n",
+    "    'long_format': 'deg',\n",
+    "    'lat_format': 'deg',\n",
+    "    'frame': 'fk5',\n",
+    "    'equinox': 'J2000'\n",
+    "}\n",
+    "\n",
+    "sql_meta = {\n",
+    "    'table_name': 'detection',\n",
+    "    'sql': '\"SELECT * FROM detection\"'\n",
+    "}\n",
+    "\n",
+    "table_meta = {\n",
+    "    'name': 'detection',\n",
+    "    'description': 'WALLABY Pilot Survey Public Data Release 2',\n",
+    "    'group_name': 'WALLABY',\n",
+    "    'filename': '',\n",
+    "    'contact': 'Tobias Westmeier <tobias.westmeier@uwa.edu.au>',\n",
+    "    'date': now,\n",
+    "    'version': 1\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c19e0b0b-389b-4667-9014-a8e3d83b035f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Survey metadata\n",
+    "\n",
+    "basedir = os.path.join('data_central', 'wallaby')\n",
+    "os.makedirs(basedir, exist_ok=True)\n",
+    "dict_to_dc_meta(os.path.join(basedir, 'wallaby_survey_meta.txt'), survey_meta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "603f36ca-7e52-421b-b687-e1187430f33e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Release metadata\n",
+    "\n",
+    "release_dir = os.path.join(basedir, release_name.lower())\n",
+    "os.makedirs(release_dir, exist_ok=True)\n",
+    "dict_to_dc_meta(os.path.join(release_dir, f'{release_name.lower()}_release_meta.txt'), release_meta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06f22fc2-ab61-4d03-baf1-59da898817c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Catalogue metadata\n",
+    "\n",
+    "catalogues_dir = os.path.join(release_dir, 'catalogues')\n",
+    "os.makedirs(catalogues_dir, exist_ok=True)\n",
+    "\n",
+    "catalogues_meta = {'name': None, 'table_name': None, 'description': None, 'ucd': None, 'unit': None, 'data_type': None}\n",
+    "with open(os.path.join(catalogues_dir, f'{release_name.lower()}_column_meta.txt'), 'w', newline='') as f:\n",
+    "    csv_writer = csv.DictWriter(f, catalogues_meta.keys(), delimiter='|')\n",
+    "    csv_writer.writeheader()\n",
+    "    for field in header_votable.get_first_table().iter_fields_and_params():\n",
+    "        csv_writer.writerow({\n",
+    "            'name': field.ID,\n",
+    "            'table_name': field.ID,\n",
+    "            'description': field.description or '',\n",
+    "            'ucd': field.ucd or '',\n",
+    "            'unit': field.unit or '',\n",
+    "            'data_type': field.datatype\n",
+    "        })\n",
+    "\n",
+    "dict_to_dc_meta(os.path.join(catalogues_dir, f'{release_name.lower()}_coordinate_meta.txt'), coordinate_meta)\n",
+    "dict_to_dc_meta(os.path.join(catalogues_dir, f'{release_name.lower()}_group_meta.txt'), group_meta)\n",
+    "dict_to_dc_meta(os.path.join(catalogues_dir, f'{release_name.lower()}_sql_meta.txt'), sql_meta)\n",
+    "dict_to_dc_meta(os.path.join(catalogues_dir, f'{release_name.lower()}_table_meta.txt'), table_meta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e922359-5851-43f5-b95a-8af87277e62c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# astroobjects metadata\n",
+    "\n",
+    "astroobjects_dir = os.path.join(release_dir, 'astroobjects')\n",
+    "os.makedirs(astroobjects_dir, exist_ok=True)\n",
+    "\n",
+    "astroobjects_header = {'source_name': None, 'ra': None, 'dec': None}\n",
+    "with open(os.path.join(astroobjects_dir, f'{release_name.lower()}_astroobjects.txt'), 'w', newline='') as f:\n",
+    "    csv_writer = csv.DictWriter(f, astroobjects_header.keys(), delimiter='|')\n",
+    "    csv_writer.writeheader()\n",
+    "    for row in write_table:\n",
+    "        csv_writer.writerow({\n",
+    "            'source_name': row['name'],\n",
+    "            'ra': row['ra'],\n",
+    "            'dec': row['dec']\n",
+    "        })"
    ]
   },
   {
